# poc-rust-webcomponents

./: .gitignore  Cargo.toml  README.md  index.html  main.js
src/: lib.rs
